bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: not found: value x
x=true
^BDR2:2: error: not found: value x
while(x){
      ^BDR2:20: error: not found: value x
      case _ => x=false
                ^BDR2:24: error: not found: value x
    x=false
    ^